# thesisMerged

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt  huffman_benchmark.cpp  lzw_benchmark.cpp  rle_benchmark.cpp
lib/: compress.h  huffman.h  lzw.h  rle.h  utility.h
src/: compress.cpp  huffman.cpp  lzw.cpp  rle.cpp
test/: CMakeLists.txt  huffman_tests.cpp  lzw_tests.cpp  rle_tests.cpp
